test/source/carehub/main/default/objects/MedicalNote__c/MedicalNote__c.object-meta.xml
<CustomObject>
    <label>Medical Note</label>
    <nameField>
        <label>Medical Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>