test/source/carehub/main/default/objects/MedicalNote__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Name</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Medical Notes</relationshipLabel>
    <relationshipName>MedicalNotes</relationshipName>
    <type>Lookup</type>
</CustomField>