test/source/carehub/main/default/objects/MedicalNote__c/fields/ExternalUpdatedAt__c.field-meta.xml
<CustomField>
    <fullName>ExternalUpdatedAt__c</fullName>
    <label>External Updated At</label>
    <type>DateTime</type>
</CustomField>